# OpenGL-Engine

./: CMakeLists.txt  CMakePresets.json  README.MD  imgui.ini  main.cpp.bak
data/bedroom/: LICENSE.txt  scene.json
data/shaders/: ADSSurface.vs  ComomnInclude.glsl  FowardPlusRendering.glsl  backrooms_wall.vs  deferred_geometry.fs  deferred_lighting.fs  fullscreen_quad.vs  hdr.fs  light_pass.fs  lights.fs  ssao.fs
data/shaders/debug/: depth_DEBUG.fs  normal_DEBUG.fs
data/textures/: FALLBACK.png~
include/: buffers.h  camera.h  mesh.h  model.h  primitives.h  renderer.h  shader.h  texture.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
src/: main.cpp
